--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: CENTO.RED
 
 # Your name to show in the footer
-author: Some Person
+author: Gabriel Furmuzachi
 
 # --- List of links in the navigation bar --- #
 
@@ -74,11 +74,11 @@ share-links-active:
   twitter: true
   facebook: true
   linkedin: true
-  vk: false
+  
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "cento.red"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
