--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ rss-description: This website is a virtual proof that I'm awesome
 share-links-active:
   twitter: true
   facebook: true
-  linkedin: true
+  linkedin: false
   
 
 # How to display the link to your website in the footer
