--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ author: Gabriel Furmuzachi
 
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
+ # Resources:
+  #  - Beautiful Jekyll: "https://beautifuljekyll.com"
+  # - Learn markdown: "https://www.markdowntutorial.com/"
   Home: "https://cento.red"
 
 # --- Logo --- #
