--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ navbar-links:
  # Resources:
   #  - Beautiful Jekyll: "https://beautifuljekyll.com"
   # - Learn markdown: "https://www.markdowntutorial.com/"
-  Home: "https://cento.red"
+ # Home: "https://cento.red"
 
 # --- Logo --- #
 
