--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: CENTO.RED
+title: BLOG
 
 # Your name to show in the footer
 author: Gabriel Furmuzachi
@@ -18,7 +18,7 @@ navbar-links:
  # Resources:
   #  - Beautiful Jekyll: "https://beautifuljekyll.com"
   # - Learn markdown: "https://www.markdowntutorial.com/"
- # Home: "https://cento.red"
+  Home: "https://cento.red"
 
 # --- Logo --- #
 
